--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9860,15 +9860,26 @@ img.logo {
 
 /* line 290, ../scss/app.scss */
 .underline {
-  background: red url(../images/underline.png) center bottom repeat-x;
+  background: transparent url(../images/underline.png) left bottom repeat-x;
+  margin-right: -0.5rem;
+  margin-left: -0.5rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 
-/* line 296, ../scss/app.scss */
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  /* line 301, ../scss/app.scss */
+  .underline {
+    background-image: url(../images/underline@2x.png);
+    background-size: 100px 15px;
+  }
+}
+/* line 310, ../scss/app.scss */
 .gcf-title-block {
   padding-bottom: 0.625rem;
 }
 
-/* line 299, ../scss/app.scss */
+/* line 313, ../scss/app.scss */
 .gcf-title {
   font-size: 1.75rem;
   font-weight: bold;
@@ -9876,15 +9887,15 @@ img.logo {
   text-transform: lowercase;
   font-weight: normal;
 }
-/* line 305, ../scss/app.scss */
+/* line 319, ../scss/app.scss */
 .gcf-title a {
   color: #18c5f4;
 }
-/* line 307, ../scss/app.scss */
+/* line 321, ../scss/app.scss */
 .gcf-title a:hover {
   color: #0aa3cd;
 }
-/* line 310, ../scss/app.scss */
+/* line 324, ../scss/app.scss */
 .gcf-title a:before {
   font-size: 1rem;
   font-weight: bold;
@@ -9902,17 +9913,17 @@ img.logo {
   box-shadow: 0 -0.5rem 0 #ff4c30, 0 1px 0.25rem #ffe049;
 }
 
-/* line 329, ../scss/app.scss */
+/* line 343, ../scss/app.scss */
 .gcf-item-block {
   padding: 0 0 1rem 0;
 }
-/* line 331, ../scss/app.scss */
+/* line 345, ../scss/app.scss */
 .gcf-item-block + .gcf-item-block {
   border-top: 1px solid #e4ce64;
   padding-top: 1rem;
 }
 
-/* line 337, ../scss/app.scss */
+/* line 351, ../scss/app.scss */
 .gcf-item-date-block {
   color: #ffe049;
   background-color: #ffe049;
@@ -9920,12 +9931,12 @@ img.logo {
   font-size: 80%;
 }
 
-/* line 343, ../scss/app.scss */
+/* line 357, ../scss/app.scss */
 .gcf-item-daterange {
   color: #444444;
 }
 
-/* line 351, ../scss/app.scss */
+/* line 365, ../scss/app.scss */
 .gcf-last-update-block {
   font-size: 80%;
   font-style: italic;
