--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -357,7 +357,7 @@ $hr-margin: rem-calc(30);
 // $include-html-alert-classes: $include-html-classes;
 
 // We use this to control alert padding.
-// $alert-padding-top: rem-calc(14);
+$alert-padding-top: rem-calc(10);
 // $alert-padding-default-float: $alert-padding-top;
 // $alert-padding-opposite-direction: $alert-padding-top + rem-calc(10);
 // $alert-padding-bottom: $alert-padding-top;
@@ -997,7 +997,7 @@ $button-font-weight: $font-weight-bold;
 $panel-bg: scale-color($pale-yellow, $lightness: 50%);
 // $panel-border-style: solid;
 // $panel-border-size: 1px;
-// $callout-panel-bg: scale-color($primary-color, $lightness: 94%);
+$callout-panel-bg: scale-color($primary-color, $lightness: 94%);
 
 // We use this % to control how much we darken things on hover
 $panel-border-color: scale-color($panel-bg, $lightness: -25%);
@@ -1007,7 +1007,7 @@ $panel-border-color: scale-color($panel-bg, $lightness: -25%);
 $panel-padding: rem-calc(10) rem-calc(16);
 
 // We use these to set default font colors
-// $panel-font-color: $oil;
+$panel-font-color: inherit;
 // $panel-font-color-alt: $white;
 
 // $panel-header-adjust: true;
