--- a/scss/app.scss
+++ b/scss/app.scss
@@ -268,6 +268,12 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  .label {
+    position: absolute;
+    top: -0.375rem;
+    left: -0.375rem;
+  }
 }
 
 .corner-bubble {
