add process worflow diagram

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1762,7 +1762,7 @@ select {
 }
 /* line 117, ../bower_components/foundation/scss/foundation/components/_alert-boxes.scss */
 .alert-box.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 118, ../bower_components/foundation/scss/foundation/components/_alert-boxes.scss */
 .alert-box.round {
@@ -2344,7 +2344,7 @@ select {
   padding: 0.5625rem 0.875rem 0.5625rem;
   background-color: #ffea81;
   border-color: #ffe35a;
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 122, ../bower_components/foundation/scss/foundation/components/_breadcrumbs.scss */
 .breadcrumbs > * {
@@ -2546,7 +2546,7 @@ button.right-align, .button.right-align {
 }
 /* line 234, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.radius, .button.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 235, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.round, .button.round {
@@ -2953,17 +2953,17 @@ button::-moz-focus-inner {
 }
 /* line 125, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
 .button-group.radius > *:first-child, .button-group.radius > *:first-child > a, .button-group.radius > *:first-child > button, .button-group.radius > *:first-child > .button {
-  -webkit-border-bottom-left-radius: 3px;
-  -webkit-border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 0.5rem;
+  -webkit-border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 /* line 136, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
 .button-group.radius > *:last-child, .button-group.radius > *:last-child > a, .button-group.radius > *:last-child > button, .button-group.radius > *:last-child > .button {
-  -webkit-border-bottom-right-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0.5rem;
+  -webkit-border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 /* line 180, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
 .button-group.radius.stack > * {
@@ -3004,17 +3004,17 @@ button::-moz-focus-inner {
 }
 /* line 125, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
 .button-group.radius.stack > *:first-child, .button-group.radius.stack > *:first-child > a, .button-group.radius.stack > *:first-child > button, .button-group.radius.stack > *:first-child > .button {
-  -webkit-top-left-radius: 3px;
-  -webkit-top-right-radius: 3px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-top-left-radius: 0.5rem;
+  -webkit-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 /* line 136, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
 .button-group.radius.stack > *:last-child, .button-group.radius.stack > *:last-child > a, .button-group.radius.stack > *:last-child > button, .button-group.radius.stack > *:last-child > .button {
-  -webkit-bottom-left-radius: 3px;
-  -webkit-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
+  -webkit-bottom-left-radius: 0.5rem;
+  -webkit-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 @media only screen and (min-width: 40.0625em) {
   /* line 181, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
@@ -3040,17 +3040,17 @@ button::-moz-focus-inner {
   }
   /* line 125, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
   .button-group.radius.stack-for-small > *:first-child, .button-group.radius.stack-for-small > *:first-child > a, .button-group.radius.stack-for-small > *:first-child > button, .button-group.radius.stack-for-small > *:first-child > .button {
-    -webkit-border-bottom-left-radius: 3px;
-    -webkit-border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px;
+    -webkit-border-bottom-left-radius: 0.5rem;
+    -webkit-border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
   }
   /* line 136, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
   .button-group.radius.stack-for-small > *:last-child, .button-group.radius.stack-for-small > *:last-child > a, .button-group.radius.stack-for-small > *:last-child > button, .button-group.radius.stack-for-small > *:last-child > .button {
-    -webkit-border-bottom-right-radius: 3px;
-    -webkit-border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border-top-right-radius: 3px;
+    -webkit-border-bottom-right-radius: 0.5rem;
+    -webkit-border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
   }
 }
 @media only screen and (max-width: 40em) {
@@ -3093,17 +3093,17 @@ button::-moz-focus-inner {
   }
   /* line 125, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
   .button-group.radius.stack-for-small > *:first-child, .button-group.radius.stack-for-small > *:first-child > a, .button-group.radius.stack-for-small > *:first-child > button, .button-group.radius.stack-for-small > *:first-child > .button {
-    -webkit-top-left-radius: 3px;
-    -webkit-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    -webkit-top-left-radius: 0.5rem;
+    -webkit-top-right-radius: 0.5rem;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
   }
   /* line 136, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
   .button-group.radius.stack-for-small > *:last-child, .button-group.radius.stack-for-small > *:last-child > a, .button-group.radius.stack-for-small > *:last-child > button, .button-group.radius.stack-for-small > *:last-child > .button {
-    -webkit-bottom-left-radius: 3px;
-    -webkit-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
+    -webkit-bottom-left-radius: 0.5rem;
+    -webkit-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
   }
 }
 /* line 190, ../bower_components/foundation/scss/foundation/components/_button-groups.scss */
@@ -3810,7 +3810,7 @@ button::-moz-focus-inner {
 }
 /* line 218, ../bower_components/foundation/scss/foundation/components/_dropdown.scss */
 .f-dropdown li.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 220, ../bower_components/foundation/scss/foundation/components/_dropdown.scss */
 .f-dropdown li a {
@@ -4081,19 +4081,19 @@ label small {
 /* line 411, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 .prefix.button.radius {
   border-radius: 0;
-  -webkit-border-bottom-left-radius: 3px;
-  -webkit-border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 0.5rem;
+  -webkit-border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 
 /* line 412, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 .postfix.button.radius {
   border-radius: 0;
-  -webkit-border-bottom-right-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0.5rem;
+  -webkit-border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 /* line 413, ../bower_components/foundation/scss/foundation/components/_forms.scss */
@@ -4176,7 +4176,7 @@ input[type="text"][disabled], input[type="text"][readonly], fieldset[disabled] i
 }
 /* line 433, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 input[type="text"].radius, input[type="password"].radius, input[type="date"].radius, input[type="datetime"].radius, input[type="datetime-local"].radius, input[type="month"].radius, input[type="week"].radius, input[type="email"].radius, input[type="number"].radius, input[type="search"].radius, input[type="tel"].radius, input[type="time"].radius, input[type="url"].radius, input[type="color"].radius, textarea.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 
 /* line 441, ../bower_components/foundation/scss/foundation/components/_forms.scss */
@@ -4185,18 +4185,18 @@ form .row .prefix-radius.row.collapse textarea,
 form .row .prefix-radius.row.collapse select,
 form .row .prefix-radius.row.collapse button {
   border-radius: 0;
-  -webkit-border-bottom-right-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0.5rem;
+  -webkit-border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 /* line 445, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 form .row .prefix-radius.row.collapse .prefix {
   border-radius: 0;
-  -webkit-border-bottom-left-radius: 3px;
-  -webkit-border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 0.5rem;
+  -webkit-border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 /* line 448, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 form .row .postfix-radius.row.collapse input,
@@ -4204,18 +4204,18 @@ form .row .postfix-radius.row.collapse textarea,
 form .row .postfix-radius.row.collapse select,
 form .row .postfix-radius.row.collapse button {
   border-radius: 0;
-  -webkit-border-bottom-left-radius: 3px;
-  -webkit-border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 0.5rem;
+  -webkit-border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 /* line 452, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 form .row .postfix-radius.row.collapse .postfix {
   border-radius: 0;
-  -webkit-border-bottom-right-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0.5rem;
+  -webkit-border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 /* line 455, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 form .row .prefix-round.row.collapse input,
@@ -4324,7 +4324,7 @@ select::-ms-expand {
 }
 /* line 360, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 select.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 361, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 select:hover {
@@ -5139,7 +5139,7 @@ kbd {
   font-size: inherit;
   margin: 0;
   padding: 0.125rem 0.25rem 0;
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 
 /* line 91, ../bower_components/foundation/scss/foundation/components/_labels.scss */
@@ -5160,7 +5160,7 @@ kbd {
 }
 /* line 96, ../bower_components/foundation/scss/foundation/components/_labels.scss */
 .label.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 97, ../bower_components/foundation/scss/foundation/components/_labels.scss */
 .label.round {
@@ -5563,7 +5563,7 @@ ul.pagination li {
 }
 /* line 110, ../bower_components/foundation/scss/foundation/components/_pagination.scss */
 ul.pagination li a, ul.pagination li button {
-  border-radius: 3px;
+  border-radius: 0.5rem;
   transition: background-color 300ms ease-out;
   background: none;
   color: #999999;
@@ -5689,7 +5689,7 @@ ul.pagination li {
 }
 /* line 100, ../bower_components/foundation/scss/foundation/components/_panels.scss */
 .panel.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 
 /* Pricing Tables */
@@ -5787,11 +5787,11 @@ ul.pagination li {
 }
 /* line 68, ../bower_components/foundation/scss/foundation/components/_progress-bars.scss */
 .progress.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 69, ../bower_components/foundation/scss/foundation/components/_progress-bars.scss */
 .progress.radius .meter {
-  border-radius: 2px;
+  border-radius: -0.5rem;
 }
 /* line 72, ../bower_components/foundation/scss/foundation/components/_progress-bars.scss */
 .progress.round {
@@ -5844,12 +5844,12 @@ ul.pagination li {
 /* line 151, ../bower_components/foundation/scss/foundation/components/_range-slider.scss */
 .range-slider.radius {
   background: #FAFAFA;
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 153, ../bower_components/foundation/scss/foundation/components/_range-slider.scss */
 .range-slider.radius .range-slider-handle {
   background: #0aa3cd;
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 118, ../bower_components/foundation/scss/foundation/components/_range-slider.scss */
 .range-slider.radius .range-slider-handle:hover {
@@ -5931,7 +5931,7 @@ ul.pagination li {
 
 /* line 171, ../bower_components/foundation/scss/foundation/components/_reveal.scss */
 .reveal-modal {
-  border-radius: 3px;
+  border-radius: 0.5rem;
   display: none;
   position: absolute;
   top: 0;
@@ -5980,7 +5980,7 @@ ul.pagination li {
 }
 /* line 182, ../bower_components/foundation/scss/foundation/components/_reveal.scss */
 .reveal-modal.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 183, ../bower_components/foundation/scss/foundation/components/_reveal.scss */
 .reveal-modal.round {
@@ -6248,10 +6248,10 @@ ul.pagination li {
 }
 /* line 186, ../bower_components/foundation/scss/foundation/components/_split-buttons.scss */
 .split.button.radius span {
-  -webkit-border-bottom-right-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0.5rem;
+  -webkit-border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 /* line 187, ../bower_components/foundation/scss/foundation/components/_split-buttons.scss */
 .split.button.round span {
@@ -6597,18 +6597,18 @@ table tr td {
 /* line 64, ../bower_components/foundation/scss/foundation/components/_tabs.scss */
 .tabs.radius dd:first-child a,
 .tabs.radius .tab:first-child a {
-  -webkit-border-bottom-left-radius: 3px;
-  -webkit-border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
+  -webkit-border-bottom-left-radius: 0.5rem;
+  -webkit-border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 /* line 69, ../bower_components/foundation/scss/foundation/components/_tabs.scss */
 .tabs.radius dd:last-child a,
 .tabs.radius .tab:last-child a {
-  -webkit-border-bottom-right-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 0.5rem;
+  -webkit-border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 /* line 74, ../bower_components/foundation/scss/foundation/components/_tabs.scss */
 .tabs.vertical dd,
@@ -6699,7 +6699,7 @@ table tr td {
 }
 /* line 63, ../bower_components/foundation/scss/foundation/components/_thumbs.scss */
 .th.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 
 /* Tooltips */
@@ -6754,7 +6754,7 @@ table tr td {
 }
 /* line 85, ../bower_components/foundation/scss/foundation/components/_tooltips.scss */
 .tooltip.radius {
-  border-radius: 3px;
+  border-radius: 0.5rem;
 }
 /* line 88, ../bower_components/foundation/scss/foundation/components/_tooltips.scss */
 .tooltip.round {
