--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -148,7 +148,7 @@ $body-font-color: $tuatara;
 // $last-child-float: $opposite-direction;
 
 // We use these to make sure border radius matches unless we want it different.
-// $global-radius: 3px;
+$global-radius: 0.5rem;
 // $global-rounded: 1000px;
 
 // We use these to control inset shadow shiny edges and depressions.
