--- a/scss/app.scss
+++ b/scss/app.scss
@@ -116,7 +116,7 @@ img {
     margin-right: 0.375rem;
   }
   &.logo {
-    max-height: rem-calc(340);
+    max-height: rem-calc(329);
   }
 }
 
@@ -287,18 +287,12 @@ img {
   font-size: rem-calc(50);
 }
 
-.script {
-  font-family: $font-family-script;
-  font-weight: normal;
-  text-transform: lowercase;
-}
-
 .underline {
   background: transparent url(../images/underline.png) left bottom repeat-x;
-  margin-right: -0.5rem;
-  margin-left: -0.5rem;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  margin-right: -0.25rem;
+  margin-left: -0.25rem;
+  padding-right: 0.375rem;
+  padding-left: 0.375rem;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (-o-min-device-pixel-ratio: 3/2),
@@ -310,6 +304,9 @@ only screen and (min-device-pixel-ratio: 1.5) {
   }
 }
 
+.box-shadow {
+  box-shadow: -0.375rem 0.375rem $white;
+}
 
 .gCalFlow {}
 .gcf-header-block {}
@@ -318,10 +315,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 }
 .gcf-title {
   font-size: rem-calc(28);
-  font-weight: bold;
-  font-family: $font-family-script;
-  text-transform: lowercase;
-  font-weight: normal;
+  font-weight: $font-weight-bold;
   a {
     color: $blue;
     &:hover {
@@ -329,7 +323,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     }
     &:before {
       font-size: 1rem;
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       content: '\2759';
       display: inline-block;
       background-color: $white;
