--- a/scss/app.scss
+++ b/scss/app.scss
@@ -308,6 +308,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   box-shadow: -0.375rem 0.375rem $white;
 }
 
+// Calendar
 .gCalFlow {}
 .gcf-header-block {}
 .gcf-title-block {
@@ -369,3 +370,14 @@ only screen and (min-device-pixel-ratio: 1.5) {
   padding: rem-calc(10) 0;
 }
 .gcf-last-update {}
+
+// Google Drive
+.google-drive {
+  background-color: scale-color($pale-yellow, $lightness: 50%);
+  box-shadow: inset -0.5rem 0.5rem rgba(0,0,0,0.1);
+  height: 235px;
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
