--- a/scss/app.scss
+++ b/scss/app.scss
@@ -381,3 +381,21 @@ only screen and (min-device-pixel-ratio: 1.5) {
     height: 100%;
   }
 }
+
+// Flickr
+.flickr {
+  position: relative;
+  padding-bottom: 61%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
